--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Ascolta le tue radio preferite",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\""
+    "start": "node index.js"
   },
   "author": "APPandAPP Srl",
   "license": "APPandAPP Srl",
